Fix linter errors

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,7 @@
         <ul class="container">
 
         </ul>
+        <div id="popup"></div>
     </main>
     <footer>
         <p>Create by Microverse student under CC license</p>
