Add counters for items and likes

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
     <title>Digital Movie Theatre</title>
 </head>
 
@@ -18,7 +19,7 @@
             movie theater logo
         </div>
         <ul class="nav">
-            <li>Movies</li>
+            <li>Movies (<span class="item-counter"></span>)</li>
             <li>Series</li>
             <li>Animation</li>
         </ul>
