--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
     <title>Digital Movie Theatre</title>
 </head>
@@ -16,7 +16,8 @@
 <body>
     <header>
         <div class="logo">
-            movie theater logo
+            <i class="fas fa-ticket-alt"></i>
+            <p>MicroTheatre</p>
         </div>
         <ul class="nav">
             <li>Movies (<span class="item-counter"></span>)</li>
@@ -31,7 +32,7 @@
         <div id="popup"></div>
     </main>
     <footer>
-        <p>Create by Microverse student under CC license</p>
+        <p>Created by Microverse students, Tshephang Mampa and Natalia Poletaeva, under CC license</p>
     </footer>
 </body>
 
