--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="image" property="og:image" content="https://user-images.githubusercontent.com/91270103/148570130-c21a73df-b87d-4f6a-85fc-5d00f9816876.png"/>
+  <meta name="description" content="This is a project is about building a web application based on an external API TV Maze API. An API retrieves TV shows and show various data about the shows. The webapp has 2 user interfaces and user can like and comment on each show." />
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+@@ -36,4 +38,4 @@
+    </footer>
+</body>
+
+</html> 
+</html>
+
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
